--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> checking out</title>
 </head>
 <body>
-<h1> just checking</h1>
+<h1>who the man are you to check..just get out</h1>
 </body>
 </html>
