returning the duplicate branches html with css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> checking out</title>
 </head>
 <body>
-<h1>who the man are you to check..just get out</h1>
+<h1>no problem man..whoever you are i accept that it is coming from the duplicate branch</h1>
 </body>
 </html>
